# scapix-core

./: CMakeLists.txt  README.md
source/scapix/core/: loop.h  tuple.h  type_traits.h
source/scapix/core/meta/: all_of.h  for_each.h  none_of.h
